refactor: restructure metrics system with QuestaoStatsDto and hierarchical breakdowns